use the correct tab for sheet local names, fdo#81195

Change-Id: I7e8b7ed552a37c6d9c6ce7c75765267b343d508c